<resources>
    <string name="app_name">Fragment Menu</string>

    <string name="tab1">CALLS</string>
    <string name="tab2">CHATS</string>
    <string name="tab3">CONTACTS</string>
    <string name="action_search">Search</string>
    <string name="action_chat">Chat</string>
    <string name="action_new_group">New Group</string>
    <string name="action_new_broadcast">New broadcast</string>
    <string name="action_whatsapp_web">WhatsApp Web</string>
    <string name="action_starred_messages">Starred messages</string>
    <string name="action_status">Status</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_call_log">Clear call log</string>
    <string name="action_calls">Calls</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_without_icon">Without Icon</string>
    <string name="action_with_icon">With Icon</string>
    <string name="action_custom">Custom Tab</string>

    <string name="txt_snap">Snap</string>
    <string name="msg_screen_1">Snap a photo of the product you want to sell</string>

    <!-- Screen 2 -->
    <string name="txt_describe">Describe</string>
    <string name="msg_screen_2_line_1">Add a brief description</string>
    <string name="msg_screen_2_line_2">about the product &amp; set a price</string>

    <!-- Screen 3 -->
    <string name="txt_share_publish">Share &amp; Publish</string>
    <string name="msg_screen_3_line_1">Publish your product across multiple</string>
    <string name="msg_screen_3_line_2">social networks, instant messengers or email</string>

    <!-- Screen 4 -->
    <string name="txt_empire_waist_dress">Empire Waist Dress</string>
    <string name="msg_screen_4_line_1">An opluently embellished halter neckline anchors the ruched bodice and sweeping tiered skirt of a wispy chiffon gown</string>
    <string name="txt_collect_payments">Collect payments \n&amp; interact with buyers</string>
    <string name="msg_screen_4_line_2">Your buyers feel secure using our buyer protection guarantee &amp; can chat with you using in-built instant messenger</string>

    <!-- Transition names -->
    <string name="transition_dress">transition_dress</string>
</resources>
