<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/rl_image_screen_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">

        <ImageView
            android:id="@+id/iv_bg_circle"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="60dp"
            app:layout_heightPercent="50%"
            app:layout_widthPercent="90%" />

        <RelativeLayout
            android:layout_width="180dp"
            android:layout_height="300dp"
            android:layout_alignBottom="@+id/iv_bg_circle"
            android:layout_marginBottom="-5dp"
            android:layout_marginLeft="88dp">


            <ImageView
                android:id="@+id/iv_buyer_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/buyer_smile_1" />

            <ImageView
                android:id="@+id/iv_dress_inside_phone_screen_4"
                android:layout_width="40dp"
                android:layout_height="80dp"
                android:layout_below="@+id/iv_buyer_image"
                android:layout_centerHorizontal="true"
                android:src="@drawable/dress_inside_phone"
                android:transitionName="@string/transition_dress"
                android:visibility="visible" />

            <RelativeLayout
                android:id="@+id/rl_text_button_screen_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_dress_inside_phone_screen_4"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_msg_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_empire_waist_dress"
                    android:textColor="@color/txt_color_dark"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_msg_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_msg_1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/msg_screen_4_line_1"
                    android:textColor="@color/alpha_a_grey"
                    android:textSize="7sp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/iv_btn_buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_msg_2"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/btn_buy"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/iv_btn_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_msg_2"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@+id/iv_btn_buy"
                    android:src="@drawable/btn_chat"
                    android:visibility="visible" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/iv_buyer_big_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="65dp"
                android:background="@drawable/buyer_smile_1"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/iv_buyer_smile_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/iv_buyer_big_image"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="106dp"
                android:src="@drawable/buyer_smile_star"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/iv_thanks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_buyer_big_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_thanks"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/tv_you_are_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_thanks"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:rotation="180"
                android:src="@drawable/ic_you_are_welcome"
                android:visibility="gone" />

        </RelativeLayout>

    </android.support.percent.PercentRelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_image_screen_4"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_txt_snap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/txt_collect_payments"
            android:textColor="@color/txt_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_msg_screen_3_line_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_txt_snap"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/msg_screen_4_line_2"
            android:textColor="@color/txt_color_light"
            android:textSize="16sp" />


    </RelativeLayout>

</RelativeLayout>
